# email-agent

./: .gitignore  .pylintrc  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
src/: __init__.py  state.py  structure_outputs.py
src/agents/: __init__.py  email_categorizer.py  email_writer.py
src/data/: data.txt
src/graph/: email_graph.py
src/nodes/: __init__.py  email_categorizer.py  email_listener.py  email_sender.py  email_writer.py
src/prompts/: __init__.py  agents.py  tasks.py
src/utils/: gmail_utils.py  rag_utils.py
